# multifinben-ocr

./: .gitignore  CLAUDE.md  README.md  download.py  main.py  pyproject.toml  requirements.txt
hyr_results/predictions_greek/Qwen__Qwen2.5-Omni-7B_zero-shot_financial/: pred_0.html  pred_1.html  pred_2.html  pred_3.html
hyr_results/predictions_japanese/Qwen__Qwen2.5-Omni-7B_zero-shot_financial/: pred_0.html  pred_1.html  pred_10.html  pred_100.html  pred_101.html  pred_102.html  pred_103.html  pred_104.html  pred_105.html  pred_106.html  pred_107.html  pred_109.html  pred_11.html  pred_110.html  pred_111.html  pred_112.html  pred_113.html  pred_114.html  pred_115.html  pred_116.html  pred_117.html  pred_118.html  pred_119.html  pred_12.html  pred_120.html  pred_121.html  pred_122.html  pred_123.html  pred_124.html  pred_125.html  pred_126.html  pred_127.html  pred_128.html  pred_129.html  pred_13.html  pred_130.html  pred_131.html  pred_132.html  pred_133.html  pred_134.html  (+957 more)
main/: evaluation.py  main.py
main/lib/: agent.py  tools.py
