[project]
name = "multifinben-ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.10.1",
    "av==13.1.0",
    "huggingface-hub[cli]>=0.35.3",
    "polars>=1.34.0",
    "qwen-omni-utils>=0.0.8",
    "rich>=14.1.0",
    "ruff>=0.13.3",
    "soundfile>=0.13.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.57.0",
]
